--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,4 @@
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: 0.5vw;
 }
 
@@ -22,7 +22,7 @@ h1 span {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-}
+} */
 
 /* body header div img {
     position: relative;
@@ -31,7 +31,7 @@ h1 span {
     height: 55px;
 } */
 
-body header {
+/* body header {
     background: #FFF;
     box-shadow: 0px 4px 4px 0px #7a9bee;
     display: flex;
@@ -77,9 +77,9 @@ body header {
     background-color: #117bc2;
     -webkit-transition: .4s;
     transition: .4s;
-}
+} */
 
-input:checked + .slider {
+/* input:checked + .slider {
     background-color: #ffffff;
     border: 1px solid black;
 }
@@ -92,16 +92,16 @@ input:checked + .slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
-}
+} */
 
 /* Rounded sliders */
-.slider.round {
+/* .slider.round {
     border-radius: 34px;
 }
 
 .slider.round:before {
     border-radius: 50%;
-}
+} */
 
 
 main section {
