--- a/CSS/index.css
+++ b/CSS/index.css
@@ -582,9 +582,9 @@ end headder style --------------------------------------------------------------
 /*service section -----------------------------------------------------------------------------------------------*/
 .service-section > h4 {
     text-align: center;
-    color: #162A5F;
+    color: #134ae2;
     font-family: 'PT Serif', serif;
-    font-size: 24px;
+    font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -593,7 +593,7 @@ end headder style --------------------------------------------------------------
 
 .service-section > h1 {
     text-align: center;
-    color: #000;
+    color: #1a94db;
     font-family: 'PT Serif', serif;
     font-size: 40px;
     font-style: normal;
@@ -616,14 +616,6 @@ main section:nth-child(3) {
     justify-content: space-between;
 }
 
-.service-section > aside:last-child {
-    position: relative;
-    top: 10vh;
-    margin: auto;
-    display: flex;
-    width: 60%;
-    justify-content: space-between;
-}
 
 .service-section > aside > div {
     border-radius: 10px;
@@ -640,7 +632,7 @@ main section:nth-child(3) {
 }
 
 .service-section > aside > div:hover {
-    box-shadow: 0px 5px 30px 5px rgb(232, 139, 10);
+    box-shadow: 0px 5px 30px 5px rgb(10, 132, 232);
 }
 
 .service-section > aside > div:hover p {
@@ -654,36 +646,24 @@ main section:nth-child(3) {
     margin: auto;
     position: relative;
     top: 2vh;
+    
 }
 
+
 .service-section > aside:nth-child(4) > div:first-child div:nth-child(1) {
-    width: 110px;
-    height: 90px;
-    background: url("../images/enterprise-icon.png");
+    background: url("../assets/icons8-laptop-coding-100.png");
     background-size: cover;
     background-position: center;
 }
 
 .service-section > aside:nth-child(4) > div:nth-child(2) div:nth-child(1) {
-    background: url("../images/web-icon.png");
+    background: url("../assets/icons8-ux-100.png");
     background-size: cover;
     background-position: center;
 }
 
-.service-section > aside:nth-child(4) > div:nth-child(3) div:nth-child(1) {
-    background: url("../images/uiux-icon.png");
-    background-size: cover;
-    background-position: center;
-}
-
-.service-section > aside:last-child > div:first-child div:nth-child(1) {
-    background: url("../images/freelance-icon.png");
-    background-size: cover;
-    background-position: center;
-}
-
-.service-section > aside:last-child > div:last-child div:nth-child(1) {
-    background: url("../images/bugFix-icon.png");
+.service-section > aside:nth-child(4) > div:last-child div:nth-child(1) {
+    background: url("../assets/icons8-website-bug-96.png");
     background-size: cover;
     background-position: center;
 }
@@ -691,7 +671,7 @@ main section:nth-child(3) {
 .service-section > aside > div h4 {
     color: #15295F;
     font-family: Libre Baskerville, cursive;
-    font-size: 1.5em;
+    font-size: 1.7em;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -699,10 +679,10 @@ main section:nth-child(3) {
 }
 
 .service-section > aside > div p {
-    color: #838383;
+    color: #757575;
     text-align: center;
     font-family: 'PT Serif', serif;
-    font-size: 1em;
+    font-size: 1.5em;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
