--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1068,9 +1068,6 @@ main section:nth-child(3) {
     height: 70vh;
 }
 
-
-
-
 .language-tools > h4 {
     text-align: center;
     color:#32b5d6;
@@ -1134,15 +1131,15 @@ main section:nth-child(3) {
     color: #042da0;
 }
 
-
-
 .recent-works > section {
     position: relative;
     width: 90%;
     height: 52vh;
     top: 0vh;
-    margin: auto;
     display: flex;
+    justify-content: center;
+    left: 10vh;
+    align-content: space-between;
 }
 
 .recent-works > section > div > div {
@@ -1150,7 +1147,7 @@ main section:nth-child(3) {
     position: absolute;
     top: 0;
     bottom: 0;
-    margin-left: 3.8vw;
+    margin-left: 4vw;
 }
 
 .recent-works > section > div > div > div:first-child {
@@ -1159,6 +1156,7 @@ main section:nth-child(3) {
     margin: auto;
     position: relative;
     top: 10vh;
+    
 }
 
 .work-svg {
@@ -1167,32 +1165,30 @@ main section:nth-child(3) {
 }
 
 .recent-works > section > div:nth-child(1) > div > div:first-child {
-    width: 8vw;
-    height: 13vh;
-    background: url("../images/enterprise-icon.png");
+    width: 5vw;
+    height: 9vh;
+    background: url("../assets/icons8-project-100.png");
     background-size: cover;
     background-position: center;
+    top: 12vh;
 }
 
 .recent-works > section > div:nth-child(2) > div > div:first-child {
-    background: url("../images/web-icon.png");
+    background: url("../assets/icons8-assignment-100.png");
     background-size: cover;
     background-position: center;
+    top: 12vh;
 }
 
-.recent-works > section > div:nth-child(3) > div > div:first-child {
-    background: url("../images/uiux-icon.png");
-    background-size: cover;
-    background-position: center;
-}
+
 
 .recent-works > section > div > div > h4 {
     text-align: center;
     position: relative;
-    top: 10vh;
-    color: #15295F;
+    top: 13vh;
+    color: #062a8d;
     font-family: 'poppins', Roboto;
-    font-size: 24px;
+    font-size: 28px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -1201,11 +1197,11 @@ main section:nth-child(3) {
 .recent-works > section > div > div > p {
     text-align: center;
     position: relative;
-    top: 10vh;
-    color: #838383;
+    top: 12vh;
+    color: #5b6b8a;
     text-align: center;
     font-family: 'Calibri', serif;
-    font-size: 20px;
+    font-size: 22px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
@@ -1220,12 +1216,13 @@ main section:nth-child(3) {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    
 }
 
 .recent-works > section > div > div > a:hover {
     font-size: 25px;
     transition-duration: 2s;
-    color: #FD6E0A;
+    color: #0a5ffd;
 }
 
 .recent-works > section > div > div:hover div {
@@ -1234,144 +1231,7 @@ main section:nth-child(3) {
 
 }
 
-/*Certificate-section ------------------------------------------------------------------------------------------------*/
-.certificate-section {
-    width: 100%;
-    height: 100vh;
-}
 
-.certificate-section > h1 {
-    color: #000;
-    text-align: center;
-    font-family: 'PT Serif', serif;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-bottom: 0;
-}
-
-.certificate-section > h4 {
-    color: #162A5F;
-    font-family: 'PT Serif', serif;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-align: center;
-}
-
-.certificate-section > hr {
-    width: 20vw;
-    height: 3px;
-    background: #FD6E0A;
-}
-
-.certificate-section > section:last-child {
-    width: 70%;
-    height: 70vh;
-    position: relative;
-    margin: auto;
-    top: 10vh;
-}
-
-.certificate-section > section:last-child > div {
-    width: 70%;
-    position: relative;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-}
-
-.certificate-section > section > button {
-    width: max-content;
-    height: 6vw;
-    border-radius: 100%;
-}
-
-.certificate-section > section > button {
-    font-size: 75px;
-    background-color: Transparent;
-    background-repeat: no-repeat;
-    border: none;
-    cursor: pointer;
-    overflow: hidden;
-    color: #f6b458;
-    position: relative;
-    box-shadow: 0 2px 25px rgb(232, 139, 10);
-    transition: all 0.2s ease-in;
-}
-
-.certificate-section > section > button:hover {
-    transform: scale(1.01);
-    box-shadow: 0 6px 4px #e88b0a;
-}
-
-.certificate-section > section > div:nth-child(2) {
-    width: 70%;
-    height: 65vh;
-    /*border: 1px solid red;*/
-    overflow: hidden;
-}
-
-.certificate-section > section > div:nth-child(2) > div {
-    width: calc(100% * 4);
-    height: 65vh;
-    /*border: 1px solid black;*/
-    display: flex;
-    transition-duration: 1s;
-}
-
-.certificate-section > section > div:nth-child(2) > div div {
-    width: calc(100% / 4);
-    height: 65vh;
-}
-
-.certificate-section > section > div:nth-child(2) > div div:nth-child(1) {
-    background: url("../images/certificate-img.png");
-    /*background: red;*/
-    background-size: cover;
-    background-position: center;
-}
-
-.certificate-section > section > div:nth-child(2) > div div:nth-child(2) {
-    background: url("../images/certificate-img.png");
-    /*background: green;*/
-    background-size: cover;
-    background-position: center;
-
-}
-
-.certificate-section > section > div:nth-child(2) > div div:nth-child(3) {
-    background: url("../images/certificate-img.png");
-    /*background: black;*/
-    background-size: cover;
-    background-position: center;
-}
-
-.certificate-section > section > div:nth-child(2) > div div:nth-child(4) {
-    background: url("../images/certificate-img.png");
-    /*background: orange;*/
-    background-size: cover;
-    background-position: center;
-}
-
-
-.certificate-section > section > button:first-child {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-}
-
-.certificate-section > section > button:last-child {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-}
 
 /*general life section ----------------------------------------------------------------------------------------------*/
 
@@ -1382,9 +1242,9 @@ main section:nth-child(3) {
 }
 
 .general-life-section > h4 {
-    color: #162A5F;
+    color:#32b5d6;
     font-family: 'PT Serif', serif;
-    font-size: 24px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -1392,7 +1252,7 @@ main section:nth-child(3) {
 }
 
 .general-life-section > h1 {
-    color: #000;
+    color: #192591;
     text-align: center;
     font-family: 'PT Serif', serif;;
     font-size: 40px;
@@ -1405,7 +1265,7 @@ main section:nth-child(3) {
 .general-life-section > hr {
     width: 22vw;
     height: 3px;
-    background: #FD6E0A;
+    background: #0064fa;
 }
 
 .general-life-section > section:nth-child(4) {
@@ -1421,7 +1281,7 @@ main section:nth-child(3) {
 }
 
 .general-life-section > section div {
-    border: 1px solid orange;
+    border: 1px solid rgb(0, 217, 255);
     border-radius: 20px;
     transition-duration: 2s;
 }
@@ -1475,7 +1335,7 @@ main section:nth-child(3) {
 
 .general-life-section > section div:hover {
     transition-duration: 2s;
-    box-shadow: 0 5px 30px 5px rgb(232, 139, 10);
+    box-shadow: 0 5px 30px 5px rgb(10, 180, 232);
     width: 102%;
     z-index: 20;
 }
