--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1349,31 +1349,33 @@ main section:nth-child(3) {
 }
 
 .contact-section > h1 {
-    color: #000;
+    color: #0a4bfd;;
     text-align: center;
     font-family: 'PT Serif', serif;
-    font-size: 40px;
+    font-size: 2vw;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     margin-bottom: 0;
 }
 
+.contact-section > h1 >span {
+    font-size: 5vw;
+    color: #042da0;
+
+}
+
 .contact-section > h4 {
-    color: #162A5F;
+    color: #32b5d6;
     font-family: 'PT Serif', serif;
-    font-size: 24px;
+    font-size: 26px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
     text-align: center;
 }
 
-.contact-section > hr {
-    width: 20vw;
-    height: 0.3vh;
-    background: #FD6E0A;
-}
+
 
 .contact-section > section {
     display: flex;
@@ -1450,7 +1452,7 @@ main section:nth-child(3) {
 
 .contact-section > section > address > div > div:first-child {
     font-size: 4em;
-    color: #FD6E0A;
+    color: #0e0afd;
 }
 
 .contact-section aside > form > fieldset {
@@ -1462,11 +1464,11 @@ main section:nth-child(3) {
     height: 6vh;
     flex-shrink: 0;
     border-radius: 20px 20px 10px 20px;
-    background: rgba(255, 178, 51, 0.37);
+    background: rgba(77, 164, 247, 0.37);
     border: 0;
     margin-top: 2vh;
     margin-bottom: 2vh;
-    box-shadow: 5px 5px 20px 2px rgba(0, 0, 0, 0.25);
+    box-shadow: 5px 5px 20px 2px rgba(13, 46, 235, 0.25);
 }
 
 .contact-section aside > form > fieldset > textarea {
@@ -1474,9 +1476,11 @@ main section:nth-child(3) {
     height: 15vh;
     flex-shrink: 0;
     border-radius: 20px 20px 10px 20px;
-    background: rgba(255, 178, 51, 0.37);
+    background:  rgba(77, 164, 247, 0.37);
     border: 0;
-    box-shadow: 5px 5px 20px 2px rgba(0, 0, 0, 0.25);
+    margin-top: 2vh;
+    box-shadow: 5px 5px 20px 2px rgba(13, 46, 235, 0.25);
+    
 }
 
 .contact-section aside > form > fieldset > label {
@@ -1495,27 +1499,36 @@ main section:nth-child(3) {
     width: 185px;
     height: 47px;
     flex-shrink: 0;
-    border-radius: 10px;
-    background: #21609B;
+    border-radius: 15px;
+    background:#33a3ff;
     color: white;
     transition-duration: 2s;
+    font-size: 18px;
+    border: #0044ff;
 }
 
 .contact-section aside > form > fieldset > button:hover {
-    background-color: #f6b458;
+    background-color: #0044ff;
     transition-duration: 2s;
     color: black;
     border: white;
+    font-size: 18px;
+}
+
+.contact-section img{
+    margin-left: 100px;
+    margin-top: 10px;
+
 }
 
 /*footer section---------------------------------------------------------------------------------------*/
 
 body footer {
     width: 100%;
-    height: 40vh;
+    height: 30vh;
     box-sizing: border-box;
     position: relative;
-    background: #FF770A;
+    background: #4f61ff;
 }
 
 body footer section {
